--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
     <title>Basic page template - W3C Design System</title>
 
     <meta property="og:description" name="description" content="Basic page template from the W3C design system"/>
-    <meta property="og:image" name="image" content="https://www.w3.org/assets/images/w3c-opengraph-image.png">
+    <meta property="og:image" name="image" content="https://www.w3.org/assets/website-2021/images/w3c-opengraph-image.png">
 
-    <script src="https://www.w3.org/assets/js/libraries/fontfaceobserver.js"></script>
+    <script src="https://www.w3.org/assets/website-2021/js/libraries/fontfaceobserver.js"></script>
 
     <script>
         let myFont = new FontFaceObserver('Noto Sans');
@@ -22,7 +22,7 @@
         var jsAssetsPath = "/assets/";
     </script>
 
-    <link rel="stylesheet" href="https://www.w3.org/assets/styles/core.css?ver=1.4.3" media="screen"/>
+    <link rel="stylesheet" href="https://www.w3.org/assets/website-2021/styles/core.css?ver=1.4.3" media="screen"/>
 
     <!--
     CSS Mustard Cut
@@ -30,13 +30,13 @@
     Edge, Chrome 39+, Opera 26+, Safari 9+, iOS 9+, Android ~5+, Android UCBrowser ~11.8+
     FF 47+
     -->
-    <link rel="stylesheet" id="advanced-stylesheet" href="https://www.w3.org/assets/styles/advanced.css?ver=1.4.3" media="
+    <link rel="stylesheet" id="advanced-stylesheet" href="https://www.w3.org/assets/website-2021/styles/advanced.css?ver=1.4.3" media="
         only print,
         only all and (pointer: fine), only all and (pointer: coarse), only all and (pointer: none),
         only all and (min--moz-device-pixel-ratio:0) and (display-mode:browser), (min--moz-device-pixel-ratio:0) and (display-mode:fullscreen)
     ">
 
-    <link rel="stylesheet" href="https://www.w3.org/assets/styles/print.css" media="print"/>
+    <link rel="stylesheet" href="https://www.w3.org/assets/website-2021/styles/print.css" media="print"/>
 
     <script>
         (function() {
@@ -45,7 +45,7 @@
                 let head = document.querySelector('head');
                 // Add main JS
                 let jsMain = document.createElement('script');
-                jsMain.src = 'https://www.w3.org/assets/js/main.js?ver=1.4.3';
+                jsMain.src = 'https://www.w3.org/assets/website-2021/js/main.js?ver=1.4.3';
                 jsMain.defer = true;
                 head.appendChild(jsMain);
                 // Update classname to show JS is available
